[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kintaiyi"
version = "0.2.3"
description = "Python 太乙神數排盤工具 - Taiyi Shenshu Divination Calculator"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "kentang", email = "kinyeah@gmail.com"},
]
keywords = ["taiyi", "divination", "chinese", "astrology", "太乙神數"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pendulum>=2.1.2",
    "sxtwl>=2.0.6",
    "ephem>=4.1.3",
    "cn2an>=0.5.23",
    "pytz>=2025.2",
    "bidict>=0.22.1",
    "drawsvg>=2.3.0",
    "numpy",
    "kerykeion>=5.6.0",
    "astropy>=6.0.1",
]

[project.optional-dependencies]
cli = [
    "typer>=0.15.3",
]
app = [
    "streamlit>=1.53.1",
    "streamlit-screen-stats>=0.0.82",
    "streamlit-local-storage>=0.0.25",
    "streamlit-browser-session-storage>=0.0.12",
    "streamlit-aggrid>=0.3.3",
    "streamlit-modal>=0.1.0",
    "streamlit-timeline>=0.0.2",
    "streamlit-date-picker>=0.0.3",
    "Flask>=3.1.2",
    "cerebras-cloud-sdk",
]
web = [
    "Flask>=3.1.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
kintaiyi = "kintaiyi.cli:main"

[project.urls]
Homepage = "https://github.com/kentang2017/kintaiyi"
Repository = "https://github.com/kentang2017/kintaiyi"
Documentation = "https://github.com/kentang2017/kintaiyi/wiki"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kintaiyi = ["*.pkl", "data/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N816",   # mixed case variable in global scope
    "B008",   # function call in default argument (standard pattern for typer/FastAPI)
]

[tool.ruff.lint.isort]
known-first-party = ["kintaiyi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
